// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-left: auto;
  width: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c3 {
  font-size: 16px;
  color: #f03e3e;
}

.c0 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f03e3e;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover:not([readonly]) {
  border-bottom: 1px solid #f03e3e;
}

.c0:focus:not([readonly]) {
  border-bottom: 1px solid #f03e3e;
}

<div>
  <input
    class="c0"
    font-size="1"
    rows="3"
    type="text"
  />
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <p
        class="c3"
        font-size="1"
      >
        Some error
      </p>
    </div>
    <div
      class="c4"
      width="16"
    >
      <p
        class="c3"
        font-size="1"
      >
        <svg
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 40 40"
          width="1em"
        >
          <g>
            <path
              d="m21.6 23.4v-6.8h-3.2v6.8h3.2z m0 6.6v-3.4h-3.2v3.4h3.2z m-20 5l18.4-31.6 18.4 31.6h-36.8z"
            />
          </g>
        </svg>
      </p>
    </div>
  </div>
</div>
`;

exports[`Input renders with onChange handler 1`] = `
.c0 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c0:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

<div>
  <input
    class="c0"
    data-testid="test-input"
    font-size="1"
    rows="3"
    type="text"
  />
</div>
`;

exports[`Input renders with prop fontSize 1`] = `
.c0 {
  font-size: 36px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 72px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c0:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

<div>
  <input
    class="c0"
    font-size="4"
    rows="3"
    type="text"
  />
</div>
`;

exports[`Input renders with prop rows 1`] = `
.c0 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
  height: 80px;
}

.c0:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c0:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

<div>
  <textarea
    class="c0"
    font-size="1"
    rows="4"
    type="textarea"
  />
</div>
`;

exports[`Input renders with prop type 1`] = `
.c0 {
  font-size: 16px;
  font-family: inherit;
  display: 'block';
  vertical-align: 'middle';
  background-color: transparent;
  border: none;
  border-bottom: 1px solid #f1f3f5;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
  width: 100%;
  height: 32px;
  box-shadow: none;
  box-sizing: content-box;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.c0:hover:not([readonly]) {
  border-bottom: 1px solid #dee2e6;
}

.c0:focus:not([readonly]) {
  border-bottom: 1px solid #0588cb;
}

<div>
  <input
    class="c0"
    font-size="1"
    rows="3"
    type="number"
  />
</div>
`;
